set standards for categories & tags

--- a/_posts/2016-04-20-sample.md
+++ b/_posts/2016-04-20-sample.md
@@ -1,17 +1,51 @@
 ---
 layout: post
-title: Sample
-categories: [general, demo]
-tags: [demo, dbyll, new]
-description: Sample placeholder post.
+title: 用Python求解常微分方程的例子
+categories: [Tech_notes]
+tags: [Python]
+fullview: False
+description: Python 求解常微分方程，使用了 Scipy 包，并对数据进行可视化。
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+### 常微分求解问题
+这里只是一个例子，问题比较简单，就不再赘述，直接看代码和输出的结果吧。
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+### 代码实现
+代码 *solveODE.py* 文件如下：
 
-{% highlight ruby %}
-def foo
-  puts 'foo'
-end
+{% highlight python %}
+#!/usr/bin/env python
+from numpy import sqrt, linspace
+from scipy.integrate import odeint
+import matplotlib.pyplot as plt
+
+# Define the initial conditions for each of the four ODEs
+inic = [1,0,0,1]
+
+# Times to evaluate the ODEs. 800 times from 0 to 100 (inclusive).
+t = linspace(0, 100, 800)
+
+# The derivative function.
+def f(z,time):
+    """ Compute the derivate of 'z' at time 'time'.
+        'z' is a list of four elements.
+        """
+    wx = sqrt(2.)
+    wy = 1
+    return [ z[2],
+            z[3],
+            -wx * z[0],
+            -wy * z[1] ]
+
+# Compute the ODE
+res = odeint(f, inic, t)
+
+# Plot the results
+plt.plot(res[:,0], res[:,1])
+plt.axis('equal')
+plt.show()
 {% endhighlight %}
+
+得到结果如图：
+
+![solveODEs_results](http://ww1.sinaimg.cn/large/62103dfdjw1f373heamrpj20xc0p0gsh.jpg)
